# turtorials

./: .gitignore  README.md
django-sample/: README.md  pyproject.toml
django-sample/manager_project/manager/: managers.py  models.py  views.py
django-sample/manager_project/manager/migrations/: 0001_initial.py
django-sample/manager_project/manager/templates/: base.html  login.html  worker_list.html
django-sample/manager_project/manager_project/: asgi.py  settings.py  urls.py  wsgi.py
django-sample/manager_project/static/manager/css/: structure.css
fastapi/: README.md  main.py
sudachi-sample/: main.py  pyproject.toml
