[tool.poetry]
name = "sudachi-sample"
version = "0.1.0"
description = ""
authors = ["yu-ya4 <yuya4.matsumura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SudachiPy = "^0.5.2"
SudachiDict-core = "^20210608"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
